<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sgwdemo</string>
    <string name="store">Store</string>
    <string name="empid">Employee ID</string>
    <string name="display">Display</string>
    <string name="storeFieldLabel">Store:</string>
    <string name="employee_idFieldLabel">Employee ID:</string>
    <string name="dump">Dump</string>
    <string name="documentCount">count</string>
    <string name="username">Login ID</string>
    <string name="password">Password</string>
    <string name="storeId">Store ID</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="serviceAddress">Auth Service Address</string>
    <string name="gatewayAddress">Sync Gateway Address</string>
    <string name="saveButton">Save</string>
    <string name="servicePropertyKey">auth_service_address</string>
    <string name="gatewayPropertyKey">sync_gateway_address</string>
    <string name="databaseNameKey">database_name</string>
    <string name="demoListKey">demo_list</string>
    <string name="tagListKey">tag_list</string>
    <string name="activeDemoKey">active_demo</string>
    <string name="groupTagFieldKey">group_tag_field</string>
    <string name="demoListChoice">demo_list_choice</string>
    <string name="servicePortList">service_port_list</string>
    <string name="servicePort">service_port</string>
    <string name="zipCode">Zip:</string>
    <string name="databaseName">Database Name</string>
    <string name="clearButton">Clear App Data</string>
    <string name="gatewayLabel">Gateway IP:</string>
    <string name="authServiceLabel">Service IP:</string>
    <string name="databaseNameLabel">Database:</string>
    <string name="demoLabel">Demo:</string>
    <string name="demoListTitle" />
    <string name="claimsList">Claims</string>
    <string name="claimIdLabel">Claim ID:</string>
    <string name="claimAmountLabel">Amount:</string>
    <string name="claimDateLabel">Date:</string>
    <string name="claimStatusLabel">Status:</string>
    <string name="claimPaidLabel">Claim Paid:</string>
    <string name="rowClaimId">Claim ID:</string>
    <string name="rowCustomer">Customer:</string>
    <string name="rowPhone">Phone:</string>
    <string name="rowAmount">Amount</string>
    <string name="rowStatus">Status:</string>
    <string name="authPortLabel">Service Port:</string>
    <string name="servicePortHint">Auth Service Port</string>
    <string name="refreshButtonDescription">Refresh</string>
    <string name="adjusterNameHeader">Adjuster:</string>
    <string name="adjusterRegionHeader">Region:</string>
    <string name="claimAdjusterLabel">Updated By:</string>
    <string name="noneText">None</string>
    <string name="cancelButton">Cancel</string>
    <string name="photoButton">Pictures</string>
    <string name="addPhotoButton">Add</string>
    <string name="galleryPhotoButton">Add</string>
    <string name="cameraPhotoButton">Camera</string>
    <string name="claimPicture">Claim Picture</string>
    <string name="pictureCount">Images:</string>
    <string name="pictureCountLabel">Images:</string>
    <string name="imageViewer">Image View</string>
    <string name="doneButton">Done</string>
    <string name="locationName">Location</string>
    <string name="clockButton">Check In</string>
    <string name="employeeStatus">Status:</string>
    <string name="backButton">Back</string>
    <string name="workedHours">Time Worked</string>
    <string name="payDue">Pay Due</string>
</resources>
