<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".preferences.PreferenceActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/gatewayLabel"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/gatewayAddress"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/gatewayAddress" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/authServiceLabel"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/serviceAddress"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/serviceAddress" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/databaseNameLabel"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/databaseName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/databaseName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/demoLabel"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <Spinner
                android:id="@+id/demoSelect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/demoListTitle"
                />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:onClick="onSaveTapped"
            android:padding="@dimen/fab_margin"
            android:text="@string/saveButton"/>

        <Button
            android:id="@+id/clearAppDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:onClick="onClearTapped"
            android:padding="@dimen/fab_margin"
            android:text="@string/clearButton"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
