<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
            <EditText
                android:id="@+id/editStore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/storeId"
                android:inputType="text" />

            <EditText
                android:id="@+id/editEID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/empid"
                android:inputType="text" />

            <TextView
                android:id="@+id/documentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/documentCount"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/showData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/display"
            android:textColor="@color/white"
            android:onClick="onDisplayTapped" />

        <Button
            android:id="@+id/showDump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/dump"
            android:textColor="@color/white"
            android:onClick="onDumpTapped" />

        <ListView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
