<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".adjuster.EditPhotos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:onClick="onSaveTapped"
            android:text="@string/saveButton"/>
        <View
            android:layout_width="20dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/galleryAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/galleryPhotoButton"/>
        <View
            android:layout_width="20dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:onClick="onCancelTapped"
            android:padding="@dimen/fab_margin"
            android:text="@string/cancelButton"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageViewer"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content" />

</LinearLayout>
