<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".adjuster.EditClaimActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/claimIdLabel"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/claimId"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/claimAmountLabel"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/claimAmount"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/claimDateLabel"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/claimDate"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/claimStatusLabel"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <Spinner
                        android:id="@+id/claimStatus"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/claimPaidLabel"
                        android:textSize="18sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/claimPaid"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:padding="5dp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:onClick="onSaveTapped"
            android:padding="@dimen/fab_margin"
            android:text="@string/saveButton"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
