<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".main.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/rowClaimId"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/rowClaimId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:padding="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/rowAmount"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/rowAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:padding="1dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/rowCustomer"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/rowCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:padding="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/rowStatus"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/rowStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:padding="1dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/rowPhone"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/rowPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:padding="1dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
